--- a/solution.ipynb
+++ b/solution.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
        "4             0  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,15 +210,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1122\n",
-      "11406\n"
+      "1142\n",
+      "11386\n"
      ]
     }
    ],
@@ -236,6 +236,73 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "positives: 1299\n",
+      "negatives: 1299\n",
+      "data: 17898\n",
+      "data: 15300\n"
+     ]
+    }
+   ],
+   "source": [
+    "positives = data[data['target_class'] == 1];\n",
+    "negatives = data[data['target_class'] == 0];\n",
+    "\n",
+    "positives = positives.sample(n=1299);\n",
+    "negatives = negatives.sample(n=1299);\n",
+    "\n",
+    "print('positives:', len(positives))\n",
+    "print('negatives:', len(negatives))\n",
+    "\n",
+    "print('data:', len(data))\n",
+    "\n",
+    "data = data.drop(negatives.index)\n",
+    "data = data.drop(positives.index)\n",
+    "\n",
+    "print('data:', len(data))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X_train: 2598\n",
+      "y_train: 2598\n",
+      "X_test: 15300\n",
+      "y_test: 15300\n"
+     ]
+    }
+   ],
+   "source": [
+    "train = positives.append(negatives);\n",
+    "\n",
+    "X_train = train.drop('target_class', axis=1);\n",
+    "y_train = train['target_class'];\n",
+    "\n",
+    "X_test = data.drop('target_class', axis=1);\n",
+    "y_test = data['target_class'];\n",
+    "\n",
+    "\n",
+    "print('X_train:', len(X_train))\n",
+    "print('y_train:', len(y_train))\n",
+    "\n",
+    "print('X_test:', len(X_test))\n",
+    "print('y_test:', len(y_test))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -244,19 +311,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "SVC(C=1.0, cache_size=200, class_weight=None, coef0=0.0,\n",
-       "  decision_function_shape='ovr', degree=3, gamma='auto_deprecated',\n",
-       "  kernel='linear', max_iter=-1, probability=False, random_state=None,\n",
-       "  shrinking=True, tol=0.001, verbose=False)"
+       "  decision_function_shape='ovr', degree=3, gamma='auto', kernel='linear',\n",
+       "  max_iter=-1, probability=False, random_state=None, shrinking=True,\n",
+       "  tol=0.001, verbose=False)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,27 +342,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/logistic.py:757: ConvergenceWarning: lbfgs failed to converge. Increase the number of iterations.\n",
-      "  \"of iterations.\", ConvergenceWarning)\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
        "          intercept_scaling=1, max_iter=100, multi_class='multinomial',\n",
-       "          n_jobs=None, penalty='l2', random_state=0, solver='lbfgs',\n",
+       "          n_jobs=1, penalty='l2', random_state=0, solver='lbfgs',\n",
        "          tol=0.0001, verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -404,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -412,19 +471,17 @@
      "output_type": "stream",
      "text": [
       "Confusion Matrix:\n",
-      "[[4826   27]\n",
-      " [  87  430]]\n",
+      "[[14700   260]\n",
+      " [   30   310]]\n",
       "Classification Report:\n",
-      "              precision    recall  f1-score   support\n",
+      "             precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.98      0.99      0.99      4853\n",
-      "           1       0.94      0.83      0.88       517\n",
+      "          0       1.00      0.98      0.99     14960\n",
+      "          1       0.54      0.91      0.68       340\n",
       "\n",
-      "   micro avg       0.98      0.98      0.98      5370\n",
-      "   macro avg       0.96      0.91      0.94      5370\n",
-      "weighted avg       0.98      0.98      0.98      5370\n",
+      "avg / total       0.99      0.98      0.98     15300\n",
       "\n",
-      "Accuracy: 0.9787709497206704\n"
+      "Accuracy: 0.9810457516339869\n"
      ]
     }
    ],
@@ -451,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 45,
    "metadata": {
     "scrolled": true
    },
@@ -461,19 +518,17 @@
      "output_type": "stream",
      "text": [
       "Confusion Matrix:\n",
-      "[[4823   30]\n",
-      " [  84  433]]\n",
+      "[[14570   390]\n",
+      " [   26   314]]\n",
       "Classification Report:\n",
-      "              precision    recall  f1-score   support\n",
+      "             precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.98      0.99      0.99      4853\n",
-      "           1       0.94      0.84      0.88       517\n",
+      "          0       1.00      0.97      0.99     14960\n",
+      "          1       0.45      0.92      0.60       340\n",
       "\n",
-      "   micro avg       0.98      0.98      0.98      5370\n",
-      "   macro avg       0.96      0.92      0.94      5370\n",
-      "weighted avg       0.98      0.98      0.98      5370\n",
+      "avg / total       0.99      0.97      0.98     15300\n",
       "\n",
-      "Accuracy: 0.9787709497206704\n"
+      "Accuracy: 0.9728104575163399\n"
      ]
     }
    ],
@@ -2328,7 +2383,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
